--- a/lang/lv-LV.json
+++ b/lang/lv-LV.json
@@ -202,5 +202,9 @@
     "voteratio": "\/me [@%%NAME%%] @%%USERNAME%% ~ Woot'i: %%WOOT%%, Meh'i: %%MEHS%%, Procentu\u0101li: %%RATIO%%.",
     "website": "\/me M\u016bsu m\u0101jaslapa: %%LINK%%",
     "youtube": "\/me [%%NAME%%] Abon\u0113jiet m\u016bs Youtub\u0113: %%LINK%%",
-    "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W\/%%GRABS%%G\/%%MEHS%%\/M."
+    "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W\/%%GRABS%%G\/%%MEHS%%\/M.",
+    "thorNotClose": "\/me @%%NAME%%, you're not worthy of getting close to the hammer!",
+    "thorcd": "\/me @%%NAME%% you can try to lift the hammer in %%TIME%% minutes.",
+    "thorWorthy": "\/me @%%NAME%% you're worthy of the hammer :hammer:, congratulations!",
+    "thorNotWorthy": "\/me @%%NAME%% you're not worthy of the hammer."
 }
