--- a/lang/de.json
+++ b/lang/de.json
@@ -43,7 +43,7 @@
         "Sieht gut aus.",
         "Z\u00e4hl nicht darauf.",
         "Ja, in geraumer Zeit.",
-        "Definitely not.",
+        "Auf keinen Fall.",
         "Definitiv nicht.",
         "Du wirst warten m\u00fcssen.",
         "Ich habe meine Zweifel.",
@@ -202,5 +202,9 @@
     "voteratio": "\/me [@%%NAME%%] @%%USERNAME%% ~ woots: %%WOOT%%, mehs: %%MEHS%%, ratio (w\/m): %%RATIO%%.",
     "website": "\/me Bitte besuch unsere Website: %%LINK%%",
     "youtube": "\/me [%%NAME%%] Subscribe unseren Youtube Channel! %%LINK%%",
-    "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W\/%%GRABS%%G\/%%MEHS%%M."
+    "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W\/%%GRABS%%G\/%%MEHS%%M.",
+    "thorNotClose": "\/me @%%NAME%%, you're not worthy of getting close to the hammer!",
+    "thorcd": "\/me @%%NAME%% you can try to lift the hammer in %%TIME%% minutes.",
+    "thorWorthy": "\/me @%%NAME%% you're worthy of the hammer :hammer:, congratulations!",
+    "thorNotWorthy": "\/me @%%NAME%% you're not worthy of the hammer."
 }
