--- a/lang/zh-TW.json
+++ b/lang/zh-TW.json
@@ -202,5 +202,9 @@
     "voteratio": "\/me [@%%NAME%%] @%%USERNAME%% ~ \u6b63\u8a55: %%WOOT%%, \u8ca0\u8a55: %%MEHS%%, \u6bd4\u7387 (\u6b63\/\u8ca0): %%RATIO%%.",
     "website": "\/me \u8acb\u8a2a\u554f\u6211\u5011\u7684\u7db2\u7ad9: %%LINK%%",
     "youtube": "\/me [%%NAME%%] \u8a02\u95b1\u6211\u5011\u7684Youtube\u983b\u9053: %%LINK%%",
-    "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%\u6b63\/%%GRABS%%\u6536\u85cf\/%%MEHS%%\u8ca0."
+    "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%\u6b63\/%%GRABS%%\u6536\u85cf\/%%MEHS%%\u8ca0.",
+    "thorNotClose": "\/me @%%NAME%%, you're not worthy of getting close to the hammer!",
+    "thorcd": "\/me @%%NAME%% you can try to lift the hammer in %%TIME%% minutes.",
+    "thorWorthy": "\/me @%%NAME%% you're worthy of the hammer :hammer:, congratulations!",
+    "thorNotWorthy": "\/me @%%NAME%% you're not worthy of the hammer."
 }
