--- a/lang/en.json
+++ b/lang/en.json
@@ -65,8 +65,8 @@
     "greyuser": "Only bouncers and up can run a bot.",
     "bouncer": "The bot can't move people when it's run as a bouncer.",
     "online": "\/me %%BOTNAME%% v%%VERSION%% online!",
-    "welcome": "\/me Welcome to the Official BlackTurbo Plug.dj ,%%NAME%%",
-    "welcomeback": "\/me Welcome back to the Official BlackTurbo Plug.dj , %%NAME%%",
+    "welcome": "\/me Welcome %%NAME%%",
+    "welcomeback": "\/me Welcome back, %%NAME%%",
     "songknown": "\/me @%%NAME%%, this song is in the DJ history.",
     "notavailable": "\/me @%%NAME%%, the song you played was not available.",
     "timelimit": "\/me @%%NAME%%, your song is longer than %%MAXLENGTH%% minutes, you need permission to play longer songs.",
@@ -203,6 +203,6 @@
     "voteratio": "\/me [@%%NAME%%] @%%USERNAME%% ~ woots: %%WOOT%%, mehs: %%MEHS%%, ratio (w\/m): %%RATIO%%.",
     "website": "\/me Please visit our website: %%LINK%%",
 	"forum": "\/me Please Register at Our Forums: %%LINK%%"
-    "twitter": "\/me [%%NAME%%] Follow us on Twitter: %%LINK%%",
+    "youtube": "\/me [%%NAME%%] Subscribe to us on youtube: %%LINK%%",
     "songstatistics": "\/me %%ARTIST%% - %%TITLE%%: %%WOOTS%%W\/%%GRABS%%G\/%%MEHS%%M."
 }
